<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rmcl_ros</name>
    <version>2.4.0</version>
    <description>The RMCL package. Software Tools for Mobile Robot Localization in 3D Meshes.</description>

    <maintainer email="alexander.mock@naturerobots.com">Alexander Mock</maintainer>
    <maintainer email="lniecksch@uos.de">Lennart Niecksch</maintainer>
    <license>BSD-3-Clause</license>

    <url>https://github.com/uos/rmcl</url>
    <author email="alexander.mock@naturerobots.com">Alexander Mock</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>rmcl_msgs</depend>
    <depend>image_transport</depend>
    <depend>visualization_msgs</depend>
    <depend>rmcl</depend>
    <depend>rmagine</depend>
    <depend>std_srvs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
